--- a/templates/issue/issue_details.html.twig
+++ b/templates/issue/issue_details.html.twig
@@ -7,7 +7,7 @@
     <div class="container" style="margin-bottom:10%;">
         <div class="card">
             <div class="card-body">
-                <p class="text-justify" class="card-text">Sprint: {{ issue.number }}</p>
+                <p class="text-justify" class="card-text">Issue: {{ issue.number }}</p>
 
                 <p class="text-justify" class="card-text">
                     <span class="font-weight-bold">Description :</span>
