--- a/templates/sprint/sprint_details.html.twig
+++ b/templates/sprint/sprint_details.html.twig
@@ -21,6 +21,11 @@
                     {% if sprint.isFinish() %}
                         <span> | </span>
                         <span class="font-weight-bold green badge" style="font-size: 110%;">Fini</span>
+                    {% else %}
+                        {% if "now"|date('Y-m-d') >= sprint.startDate|date('Y-m-d') %}
+                            <span> | </span>
+                            <span class="font-weight-bold yellow badge" style="font-size: 110%;">En cours</span>
+                        {% endif %}
                     {% endif %}
                 </div>
             </div>
