--- a/templates/release/release_list.html.twig
+++ b/templates/release/release_list.html.twig
@@ -7,9 +7,12 @@
     <div class="container">
         <div class="card">
             <div class="card-body">
-                <h3 class="card-title mb-4">Releases</h3>
+                <h3 class="card-title mb-4">Releases : </h3>
+                <a class="btn btn-primary mt-3" title="Ajouter une release" href="{{ path('createRelease', {'id_project' : project.id}) }}" style="margin-bottom:10px;">
+                    <img src="{{ asset('build/images/add.svg') }}" style="max-width: 30px; filter: invert(1);">
+                </a>
                 {% if releases is not empty %}
-                    <ul class="list-group">
+                    <ul class="list-group card to-scroll">
                         {% for index, release in releases %}
                             <li id="item-{{ release.id }}" class="list-group-item">
                                 <div class="row">
@@ -51,7 +54,6 @@
                 {% else %}
                     <p> Vous n'avez pour l'instant créé aucun release.</p>
                 {% endif %}
-                <a class="btn btn-primary mt-3" href="{{ path('createRelease', {'id_project' : project.id}) }}">Créer un release</a>
             </div>
         </div>
     </div>
