--- a/templates/sprint/sprint_list.html.twig
+++ b/templates/sprint/sprint_list.html.twig
@@ -7,9 +7,12 @@
     <div class="container">
         <div class="card">
             <div class="card-body">
-                <h3 class="card-title mb-4">Sprints </h3>
+                <h3 class="card-title mb-4">Sprints : </h3>
+                <a class="btn btn-primary mt-3" title="Ajouter un sprint" href="{{ path('createSprint', {'id_project' : project.id}) }}" style="margin-bottom:10px;">
+                    <img src="{{ asset('build/images/add.svg') }}" style="max-width: 30px; filter: invert(1);">
+                </a>
                 {% if sprints is not empty %}
-                    <ul class="list-group">
+                    <ul class="list-group card to-scroll">
                         {% for index, sprint in sprints %}
                             <li id="item-{{ sprint.id }}" class="list-group-item">
                                 <div class="row">
@@ -83,7 +86,6 @@
                 {% else %}
                     <p> Vous n'avez pour l'instant créé aucun sprint.</p>
                 {% endif %}
-                <a class="btn btn-primary mt-3" href="{{ path('createSprint', {'id_project' : project.id}) }}">Créer un sprint</a>
             </div>
         </div>
     </div>
