[Bugfix] Adaptation du code pour ajout de visualisation des test associés à une issue

--- a/templates/issue/issue_list.html.twig
+++ b/templates/issue/issue_list.html.twig
@@ -46,7 +46,7 @@
                                     </div>
                                     <div class="col-md-6 col-lg-4 d-flex justify-content-md-end mt-2 mt-md-0">
                                         {% if issue.getTasks() is not empty %}
-                                        <a class="btn btn-success my-auto mr-1" href="{{ path('issueDetails', {'id_project': project.id,'id_issue':issue.id}) }}">Tâches associées</a>
+                                        <a class="btn btn-success my-auto mr-1" href="{{ path('issueDetailsTask', {'id_project': project.id,'id_issue':issue.id}) }}">Tâches associées</a>
                                         {% endif %}
                                         <a class="btn btn-light my-auto mr-1" title="Editer" href="{{ path('editIssue', {'id_project': project.id, 'id_issue' : issue.id}) }}">
                                             <img src="{{ asset('build/images/edit.svg') }}" style="max-width: 30px;">
