--- a/templates/issue/issue_task_details.html.twig
+++ b/templates/issue/issue_task_details.html.twig
@@ -1,6 +1,6 @@
 {% extends 'project_frame.html.twig' %}
 
-{% block title %}Informations de l'issue - {{ issue.number }}{% endblock %}
+{% block title %}Tâches de l'issue - {{ issue.number }}{% endblock %}
 
 {% block content %}
 
